# DAQ

./: .gitignore  README.md
CAEN/: untitled.txt
CAEN/CAENUpgrader-1.7.8/: ChangeLog  Makefile  README  config.h  config.status  configure  configure.ac
CAEN/CAENUpgrader-1.7.8/CAENBridgeUpgrade/: Makefile  Makefile.in
CAEN/CAENUpgrader-1.7.8/CAENBridgeUpgrade/src/: CAENBridgeUpgrade  CAENBridgeUpgrade.c  Makefile  Makefile.am
CAEN/CAENUpgrader-1.7.8/CAENBridgeUpgrade/src/.deps/: A3818Upgrade.Po  CAENBridgeUpgrade.Po  CFASegment.Po  flash.Po  p30.Po
CAEN/CAENUpgrader-1.7.8/CAENUpgraderGUI/: CAENUpgraderGUI.ini  Makefile  Makefile.am  Makefile.in
CAEN/CAENUpgrader-1.7.8/DeskBoot/: Makefile
CAEN/CAENUpgrader-1.7.8/DeskBoot/src/: DeskBoot  DeskBoot.c  Makefile
CAEN/CAENUpgrader-1.7.8/DeskBoot/src/.deps/: DeskBoot.Po
CAEN/CAENUpgrader-1.7.8/HVUpgrade/: Makefile
CAEN/CAENUpgrader-1.7.8/HVUpgrade/src/: DTHVUpgrade  DTHVUpgrade.c  Makefile
CAEN/CAENUpgrader-1.7.8/HVUpgrade/src/.deps/: DTHVUpgrade.Po
CAEN/CAENUpgrader-1.7.8/cvUpgrade/: Makefile  Makefile.in
CAEN/CAENUpgrader-1.7.8/cvUpgrade/src/: Makefile  cvUpgrade  cvupgrade.c
CAEN/CAENUpgrader-1.7.8/cvUpgrade/src/.deps/: cvupgrade.Po  flash.Po
CAEN/CAENVMELib-v4.0.2/sample/: CAENVMEDemo  untitled.txt
CAEN/CAENVMELib-v4.0.2/sampleio/: IODemo
CAEN/CAEN_PLULib-v1.4.1-rc4/: Readme.txt  ReleaseNotes.txt
CAEN/CAEN_PLULib-v1.4.1-rc4/include/.ipynb_checkpoints/: CAEN_PLULib-checkpoint.h
CAEN/CAEN_PLULib-v1.4.1-rc4/lib/: install  install_arm64  install_x64
CAEN/CAEN_PLULib-v1.4.1-rc4/lib/arm64/: libCAEN_PLU.so.v1.4.1-rc4
CAEN/CAEN_PLULib-v1.4.1-rc4/lib/x64/: libCAEN_PLU.so.v1.4.1-rc4
CAEN/CAEN_PLULib-v1.4.1-rc4/lib/x86/: libCAEN_PLU.so.v1.4.1-rc4
CAEN/CAEN_PLULib-v1.4.1-rc4/samples/test/: CAEN_PLULibTEST.cpp  Makefile  ReadMe.txt  v2495_test.vcxproj
CAEN/V4718-USB-Drv/: README  install.sh  regPID.sh
CAEN/caen_pluscalerdaq-v1.4/: CHANGELOG  INSTALL  Makefile  Makefile.am  Makefile.in  aclocal.m4  config.status  configure  configure.ac
CAEN/caen_pluscalerdaq-v1.4/inc/: PLUscalerLib.h  config.h  keyb.h
CAEN/caen_pluscalerdaq-v1.4/src/: Makefile  Makefile.am  Makefile.in  PLUscalerDAQ.c  PLUscalerLib.c  PLUscaler_daq  config.c  gnuplot_i.c  keyb.c
CAEN/caen_pluscalerdaq-v1.4/src/.deps/: PLUscaler_daq-PLUscalerDAQ.Po  PLUscaler_daq-PLUscalerLib.Po  PLUscaler_daq-config.Po  PLUscaler_daq-gnuplot_i.Po  PLUscaler_daq-keyb.Po
CAEN/wavedump-3.10.6/: Makefile  config.status
CAEN/wavedump-3.10.6/src/: Makefile  wavedump
CAEN/wavedump-3.10.6/src/.deps/: WDconfig.Po  WDplot.Po  WaveDump.Po  X742CorrectionRoutines.Po  fft.Po  flash.Po  keyb.Po  spi.Po
cygno/: cygnus_fe.cxx
online/: .LOGGER_HISTORY_EVENTS.TXT  .ODB.SHM  README.txt  RUCIO.md  exptab  htpasswd.txt  kill_daq.sh  start_daq.sh
online/source/: CMakeLists.txt  CMakeLists_CYGNO.txt  WCfastcheck-midas.ipynb  cp_sim.py  cupid_fe_soloV1742.cxx  cupid_fe_soloV1742_v2.cxx  event_display.py  event_display_scope.py  fe_teledyne.py  midas2rucio.py  midas2rucio.sh  wclib.py
online/source/.ipynb_checkpoints/: WCfastcheck-midas-checkpoint.ipynb
online/source/stcupid/: CMakeLists.txt  cupid_digi_io  cupid_digi_io.cpp  fe_rtp_multistream.cxx  midas_online_plot.py  online_plot.py  rtp_producer  rtp_producer.cpp  rtp_producerSig  rtp_producerSig.cpp  rtp_receiver  rtp_receiver.cpp  rtp_receiver_plot.py
online/userfiles/: DAQtest.json  fname.json
