#	Copyright (C) 2023 CAEN SpA
#
#	This file is part of the CAEN PLU Scaler demo.
#
#	The CAEN PLU Scaler demo is free software; you can redistribute it and/or
#	modify it under the terms of the GNU General Public
#	License as published by the Free Software Foundation; either
#	version 3 of the License, or (at your option) any later version.
#
#	The CAEN PLU Scaler demo is distributed in the hope that it will be useful,
#	but WITHOUT ANY WARRANTY; without even the implied warranty of
#	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
#	General Public License for more details.
#
#	You should have received a copy of the GNU General Public
#	License along with the CAEN PLU Scaler demo; if not, see
#	https://www.gnu.org/licenses/.
#
#	SPDX-License-Identifier: GPL-3.0-or-later

bin_PROGRAMS = PLUscaler_daq

PLUscaler_daq_SOURCES = \
    config.c \
    gnuplot_i.c \
    keyb.c \
    PLUscalerDAQ.c \
    PLUscalerLib.c

PLUscaler_daq_CPPFLAGS = \
    -I$(top_srcdir)/inc
